chart made responsive to stop overflow on mobile

--- a/components/chart/chart.module.css
+++ b/components/chart/chart.module.css
@@ -1,6 +1,6 @@
 .chart_container {
-  width: 100%;
-  height: 100%;
+  height: 600px;
+  margin-bottom: 1.5rem;
 }
 
 .loading {
@@ -12,8 +12,12 @@
 }
 
 .chart {
-  width: 290px;
-  height: 230px;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .title {
@@ -22,14 +26,15 @@
   margin-bottom: 0.5rem;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 760px) {
   .title {
     text-align: center;
   }
 
   .chart_container {
-    height: 800px;
-    margin-bottom: 2rem;
+    height: 600px;
+    margin-bottom: 5rem;
+    width: 100%;
   }
 
   .chart {
